Archive2/84/669f83a725e7af/output
main.cpp:2:6: error: 'PrefixTree' has not been declared
 bool PrefixTree::completePlusPrefix(string ss, list<string>* ll){
      ^
main.cpp:2:37: error: 'string' was not declared in this scope
 bool PrefixTree::completePlusPrefix(string ss, list<string>* ll){
                                     ^
main.cpp:2:48: error: 'list' was not declared in this scope
 bool PrefixTree::completePlusPrefix(string ss, list<string>* ll){
                                                ^
main.cpp:2:53: error: 'string' was not declared in this scope
 bool PrefixTree::completePlusPrefix(string ss, list<string>* ll){
                                                     ^
main.cpp:2:62: error: 'll' was not declared in this scope
 bool PrefixTree::completePlusPrefix(string ss, list<string>* ll){
                                                              ^
main.cpp:2:64: error: expression list treated as compound expression in initializer [-fpermissive]
 bool PrefixTree::completePlusPrefix(string ss, list<string>* ll){
                                                                ^
main.cpp:2:65: error: expected ',' or ';' before '{' token
 bool PrefixTree::completePlusPrefix(string ss, list<string>* ll){
                                                                 ^
